# ros2_pkg_taemin

./: README.md  Untitled.ipynb  Untitled1.ipynb  rosmap.pgm  rosmap.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
install/pinky_description/share/pinky_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/pinky_description/share/pinky_description/cmake/: pinky_descriptionConfig.cmake  (+1 more)
install/pinky_gazebo/share/pinky_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml  package.zsh
install/pinky_navigation/share/pinky_navigation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pinky_simple_navigator/lib/pinky_simple_navigator/: simple_navigator
install/pinky_simple_navigator/share/pinky_simple_navigator/: package.bash  package.sh  package.xml
install/pinky_tmpatrol/lib/pinky_tmpatrol/: click2yaml  patrol_node
install/pinky_tmpatrol/share/pinky_tmpatrol/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pinky_tmproject/lib/pinky_tmproject/: tm_centerline_nav
install/pinky_tmproject/share/pinky_tmproject/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/: test.rviz
src/install/: local_setup.sh  setup.sh  setup.zsh
src/log/: latest_build
src/pinky_tmpatrol/: package.xml  setup.cfg  setup.py
src/pinky_tmpatrol/config/: nav2_overrides.yaml  waypoints.yaml
src/pinky_tmpatrol/launch/: wallpatrol.launch.py
src/pinky_tmpatrol/pinky_tmpatrol/: patrol_node.py
src/pinky_tmproject/: package.xml  setup.cfg  setup.py
(+144 files in other folders)
