<?xml version="1.0"?>
<package format="3">
  <name>pinky_tmproject</name>
  <version>0.1.0</version>
  <description>Topic-driven centerline navigation with RViz point labels.</description>

  <maintainer email="you@example.com">tm</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
